# exercism

./: .gitignore  README.md  justfile
c/: .gitignore  justfile
c/hello-world/: hello_world.c
c/leap/: leap.c
clojure/: .gitignore  justfile
cpp/: .gitignore  justfile
cpp/reverse-string/: reverse_string.cpp  reverse_string.h
csharp/: .gitignore  justfile
csharp/leap/: Leap.cs
elixir/: justfile
elixir/city-office/: README.md
go/: justfile
go/airport-robot/: airport_robot.go
go/animal-magic/: animal_magic.go
go/annalyns-infiltration/: annalyns_infiltration.go
go/bird-watcher/: bird_watcher.go
go/blackjack/: blackjack.go
go/book-store/: HELP.md  README.md  book_store.go
go/booking-up-for-beauty/: booking_up_for_beauty.go
go/card-tricks/: card_tricks.go
go/cars-assemble/: cars_assemble.go
go/census/: census.go
go/chessboard/: chessboard.go
go/collatz-conjecture/: collatz_conjecture.go
go/difference-of-squares/: difference_of_squares.go
go/election-day/: election_day.go
go/elons-toys/: elons_toys.go
go/expenses/: expenses.go
go/gross-store/: gross_store.go
go/hamming/: hamming.go
go/interest-is-interesting/: interest_is_interesting.go
go/isogram/: isogram.go
go/lasagna/: lasagna.go
java/: .gitignore  justfile
javascript/: justfile
jq/: justfile
kotlin/: .gitignore  justfile
mips/: justfile
nim/: justfile
python/: justfile  pyproject.toml
python/hello-world/.exercism/: metadata.json
python/leap/.exercism/: metadata.json
ruby/: justfile
rust/: justfile
wasm/: justfile
zig/: justfile
(+417 files in other folders)
