[tool.poetry]
name = "exercism"
version = "0.1.0"
description = ""
authors = ["Joey Yu <joey@jyu.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cache = "^1.0"
pytest-subtests = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
